bank-knative-service/deployment.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: process-transaction
  # local to cluster only
  labels:
    serving.knative.dev/visibility: cluster-local
spec:
  template:
    metadata:
      annotations:
        # Target 10 requests in-flight per pod.
        autoscaling.knative.dev/target: "10"
        # Disable scale to zero with a minScale of 1.
        # autoscaling.knative.dev/minScale: "1"
        # Limit scaling to 50 pods.
        # autoscaling.knative.dev/maxScale: "50"
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - image: anthonyamanse/knative-transaction-process:with-auth
          envFrom:
            - secretRef:
                name: bank-oidc-adminuser
            - secretRef:
                name: mobile-simulator-secrets
          env:
            - name: TRANSACTION_SERVICE_URL
              value: "http://transaction-service:9080/bank/v1/transactions"
